--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,10 @@
   <artifactId>restassured</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>test_restassured</name>
+
+    <properties>
+        <surefire.version>3.2.5</surefire.version>
+    </properties>
   <dependencies>
 
     <!-- Rest Assured -->
@@ -20,6 +24,7 @@
         <version>7.9.0</version>
         <scope>test</scope>
     </dependency>
+
 
     <!-- JSON -->
     <dependency>
@@ -54,14 +59,44 @@
   </dependencies>
     <build>
         <plugins>
+
+            <!-- Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
                 <configuration>
-                    <source>7</source>
-                    <target>7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
+
+            <!-- Surefire Plugin for TestNG -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.version}</version>
+            </plugin>
+
         </plugins>
     </build>
+ <profiles>
+     <profile>
+             <id>api-tests</id>
+             <build>
+                 <plugins>
+                     <plugin>
+                         <groupId>org.apache.maven.plugins</groupId>
+                         <artifactId>maven-surefire-plugin</artifactId>
+                         <configuration>
+                             <suiteXmlFiles>
+                                 <suiteXmlFile>ApiTest.xml</suiteXmlFile>
+                             </suiteXmlFiles>
+                         </configuration>
+                     </plugin>
+                 </plugins>
+             </build>
+         </profile>
+ </profiles>
+
 </project>
