updating actions file

--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -1,22 +1,26 @@
-  name: run api tests
+name: run api tests
 
-  on:
-    push:
-      branches:
-        -master
-      pull_requests:
-        -master
-  jobs:
-    build:
-      runs-on: ubuntu-latest
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
+
       - name: Run Smoke Suite
         run: mvn clean test -Papi-tests
