Updating action files ui and video capability

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -8,3 +8,5 @@ auth.username=admin
 auth.password=secret
 auth.token=YOUR_BEARER_TOKEN
 auth.xtoken=reqres_c166f24207954dd4bff2d72a8010bb44
+
+ui.browser=remote
