--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,25 @@
                  </plugins>
              </build>
          </profile>
+         <profile>
+             <id>ui-tests</id>
+             <properties>
+                 <grid.url>http://localhost:4444/wd/hub</grid.url>
+             </properties>
+             <build>
+                 <plugins>
+                     <plugin>
+                         <groupId>org.apache.maven.plugins</groupId>
+                         <artifactId>maven-surefire-plugin</artifactId>
+                         <configuration>
+                         <suiteXmlFiles>
+                             <suiteXmlFile>src/test/resources/suites/UISuite.xml</suiteXmlFile>
+                         </suiteXmlFiles>
+                         </configuration>
+                     </plugin>
+                 </plugins>
+             </build>
+         </profile>
  </profiles>
 
 </project>
