--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -25,3 +25,15 @@ jobs:
       - name: Run Smoke Suite
         run: mvn clean test -Papi-tests
 
+      - name: Upload Reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-report
+          path: target/surefire-reports/
+
+      - name: Upload Videos
+        uses: actions/upload-artifact@v4
+        with:
+          name: selenium-videos
+          path: videos/
+
