--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,7 @@
-base.url=https://reqres.in
-auth.type=x-auth-api
-#auth.type=none
+#base.url=https://reqres.in
+base.url=https://petstore.swagger.io/v2/
+#auth.type=x-auth-api
+auth.type=none
 # auth.type=basic
 # auth.type=bearer
 
