--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -23,7 +23,7 @@ jobs:
           cache: maven
 
       - name: Run Smoke Suite
-        run: mvn clean test -Papi-tests
+        run: mvn clean test -PpetStore_api-tests
 
       - name: Upload Reports
         uses: actions/upload-artifact@v4
